src/test/resources/typeSystemTestModels/valid/statements/WhileConditionHasBooleanType.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.statements;

public class WhileConditionHasBooleanType {
  public void test(){
    while (1==2){

    }
  }
}
